added underlines to interactive texts
-Added underlines to link texts in order to make it clear that they're interactive
     -fixed on all region pages and landing page

-fixed "Clavicle" header to make it bold like the rest of the headers

--- a/index.html
+++ b/index.html
@@ -1997,11 +1997,11 @@
                 <ul>
                     <li>Click on the bone group on the diagram of which bone you wish to assess the age.
                     <ul>
-			    <li><a href="skull.html">Skull</a></li>
+			    <li><a href="skull.html"><u>Skull</a></li>
 			    <li><a href="upper_limbs.html">Upper Limbs</a></li>
 			    <li><a href="lower_limbs.html">Lower Limbs</a></li>
 			   <li><a href="thorax.html">Thorax</a></li>
-			   <li><a href="pelvic_girdle.html">Pelvic Girdle</a></li>
+			   <li><a href="pelvic_girdle.html">Pelvic Girdle</u></a></li>
 		    </ul>          
                     <li>Compare the bone/element you have to the aging methods provided</li>
                     <li>Select the stage of union or fusion for that element</li>
