--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -185,11 +185,11 @@
                 <h2>Bones of the lower limbs</h2>
                     <p>The bones of the thorax used for juvenile aging in this project are:<p>
                    	 <ul>
-			    <li><a href="#femur1">Femur</a></li>
+			    <li><a href="#femur1"><u>Femur</a></li>
 			    <li><a href="#patella1">Patella</a></li>
 			    <li><a href="#tibia1">Tibia</a></li>
 			    <li><a href="#fibula1">Fibula</a></li>
-			    <li><a href="#feet1">Feet</a></li>
+			    <li><a href="#feet1">Feet</u></a></li>
                     	</ul> 
 		    <ol>
                     <li>Compare the bone/element you have to the quick description of aging methods provided for that specific bone.</li>
