--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -158,13 +158,13 @@
                 <h2>Bones of the pelvic girdle</h2>
                     <p>The bones of the pelvic girdle used for juvenile aging in this project are:<p>
                    	 <ul>
-			    <li><a href="#oscoxa1">Os coxa</a></li>
+			    <li><a href="#oscoxa1"><u>Os coxa</u></a></li>
 				 <ul>
 			    		<li><a href="#ilium1">Ilium</a></li>
 			    		<li><a href="#ischium1">Ischium</a></li>
 			    		<li><a href="#pubis1">Pubis</a></li>
 				 </ul>
-			    <li><a href="#sacrum1">Sacrum</a></li>
+			    <li><a href="#sacrum1"><u>Sacrum</u></a></li>
                     	</ul> 
 		    <ol>
                     <li>Compare the bone/element you have to the quick description of aging methods provided for that specific bone.</li>
