--- a/skull.html
+++ b/skull.html
@@ -201,12 +201,12 @@
                 <h2>Bones of the skull</h2>
                     <p>The bones of the skull used for juvenile aging in this project are:<p>
                    	 <ul>
-			    <li><a href="#frontal1">Frontal</a></li>
+			    <li><a href="#frontal1"><u>Frontal</a></li>
 			    <li><a href="#temporal1">Temporal</a></li>
 			    <li><a href="#occipital1">Occipital</a></li>
 			    <li><a href="#sphenoid1">Sphenoid</a></li>
 			    <li><a href="#mandible1">Mandible</a></li>
-			    <li><a href="#dentition1">Dentition</a></li>
+			    <li><a href="#dentition1">Dentition</u></a></li>
                     	</ul> 
 		    <ol>
                     <li>Compare the bone/element you have to the quick description of aging methods provided for that specific bone.</li>
