--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -204,12 +204,12 @@
                 <h2>Bones of the upper limbs</h2>
                     <p>The bones of the thorax used for juvenile aging in this project are:<p>
                    	 <ul>
-			    <li><a href="#clavicle1">Clavicle</a></li>
+			    <li><a href="#clavicle1"><u>Clavicle</a></li>
 			    <li><a href="#scapula1">Scapula</a></li>
 			    <li><a href="#humerus1">Humerus</a></li>
 			    <li><a href="#radius1">Radius</a></li>
 			    <li><a href="#ulna1">Ulna</a></li>
-			    <li><a href="#hands1">Hands</a></li>
+			    <li><a href="#hands1">Hands</u></a></li>
                     	</ul> 
 		    <ol>
                     <li>Compare the bone/element you have to the quick description of aging methods provided for that specific bone.</li>
@@ -233,7 +233,7 @@
 	<div class="col-lg-4">
 		<div class="description">
 			<h7><a name="clavicle1"><b>Clavicle</b></a></h7>
-			<br><h2>Clavicle</h2>
+			<br><h2><b>Clavicle</b></h2>
 		<p>The clavicle is an interesting case as it is one of the first bones to form in utero at about 5 weeks, but it is the last bone to have any epiphyses fuse.  The medial end of the clavicle remains without an epiphysis until a small medial flake begins to form.  The timing of this ossification usually occurs between 12 and 14 years with fusion beginning sometime between 16 and 21 years of age (Stevenson 1924; McKern and Stewart).  However, complete fusion of the medial epiphysis is highly variable and only guaranteed to be finished by individuals older than 29 years of age (MacLaughlin 1990; Black and Scheuer 1996).</p>
 		</div>
 	</div>
