--- a/thorax.html
+++ b/thorax.html
@@ -181,16 +181,16 @@
                <h2>Bones of the thorax</h2>
 		    <p>The bones of the thorax used for juvenile aging in this project are:<p>
 			 <ul>
-			    <li>Vertebrae</li>
+			    <li><a href="#atlas1"><u>Vertebrae</u></a></li>
 				 <ul>
-					 <li><a href="#atlas1">C1 - Atlas</a></li>
+					 <li><a href="#atlas1"><u>C1 - Atlas</a></li>
 					 <li><a href="#axis1">C2 - Axis</a></li>
 					 <li><a href="#cerv1">Cervical vertebrae</a></li>
 					 <li><a href="#thor1">Thoracic vertebrae</a></li>
 					 <li><a href="#lum1">Lumbar vertebrae</a></li>
 				 </ul>
 				 <li><a href="#sternum1">Sternum</a></li>
-				 <li><a href="#ribs1">Ribs</a></li>				   
+				 <li><a href="#ribs1">Ribs</u></a></li>				   
 			</ul>
 		    <ol>
                     <li>Compare the bone/element you have to the quick description of aging methods provided for that specific bone.</li>
