Changed landing page text
-Edited landing page text to make it clearer
-changed "physical" to "biological" anthropologist/-gy
-Capitalized "Vertebrae" on thorax page for the cervical, thoracic, and lumbar section headers

--- a/index.html
+++ b/index.html
@@ -1983,15 +1983,16 @@
     </g>
   </g>
 </svg>
-           
+<p>Click on one of the bones in the diagram above to be taken to the page focusing on that bone's region.</p>
             </div>
 
             <div class="col-lg-6"> 
 		    <div class="intro">
                 <h3>Project Description</h3>
-			<p>Welcome to J-Skel, the digital juvenile skeletal age estimator. This project is aimed at acquainting students of physical anthropology and human osteology with a few of the different methods used to estimate the age-at-death of human juvenile skeletal remains.</p>
-			<p>Due to their complex growth and development, juvenile remains are rarely addressed in introductory osteology courses and even infrequently studied in advanced settings.  As a result, some osteologists and physical anthropologists are relatively unfamiliar with juvenile osteology when remains are encountered in the field or lab.  However, it is their complex development that allows to more accurately estimate the age of juvenile remains compared to those of an adult.  For this project, epiphyseal fusion has been the main aging method, but will also touch upon tooth formation and eruption, as well as the appearance of ossification centers.</p>
-			<p>Research involving juvenile skeletal remains has gained traction in the past few decades, but there is still a bias.  Most of the studies published, and most that are used in this project, were done using white European or European American samples.  As the research corpus expands, more regional studies are being conducted and tailored to specific geographically and culturally bounded populations.</p>
+            <br>
+			<p>Welcome to J-Skel, the digital juvenile skeletal age estimator. This project is aimed at acquainting students of biological anthropology and human osteology with a few of the different methods used to estimate the age-at-death of human juvenile skeletal remains.</p>
+			<p>Due to their complex growth and development, juvenile remains are rarely addressed in introductory osteology courses and even infrequently studied in advanced settings.  As a result, some osteologists and biological anthropologists are relatively unfamiliar with juvenile osteology when remains are encountered in the field or lab.  However, it is their complex development that allows a more accurate age estimation for juvenile remains compared to those of an adult.  For this project, epiphyseal fusion has been the focal aging method with a few elements using the appearance of certain ossification centers. While dental formation and eruption are also incredibly accurate methods for age estimation, they have not been included in this initial phase, though there are plans to include them at a later date.</p>
+			<p>Research involving juvenile skeletal remains has gained traction in the past few decades, but there is still a bias.  Most of the studies published, and most that are used in this project, were done using white European or Euro-American samples.  As the research corpus expands, more regional studies are being conducted and tailored to specific geographically and culturally bounded populations.</p>
 		    
 		    <h3>Instructions</h3>
                 <ul>
