Fixed text errors
-Changed the subheadings on lower limbs and upper limbs pages to go from: "Epiphyseal fusion in the leg, lower leg, and feet" to "Epiphyseal fusion in the legs and feet"
-Same pattern with upper limbs (arms and hands)

-Capitalized "Girdle" in the "Pelvic Girdle" heading on its page

--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -87,7 +87,7 @@
         <div class="row">
             <div class="col-lg-12">
 		    <h1 class="page-header"><b>Upper Limbs</b>
-				<small style="color:black">Epiphyseal fusion in the arm, forearm, and hand</small>
+				<small style="color:black">Epiphyseal fusion in the arms and hands</small>
                 </h1>
             </div>
         </div>
