--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -82,7 +82,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-		    <h1 class="page-header"><b>The Pelvic girdle</b>
+		    <h1 class="page-header"><b>The Pelvic Girdle</b>
                 <small style="color:black">Fusion of pelvic and sacral elements</small>
                 </h1>
             </div>
