spacing at footer
-Changed the spacing of the footer text
-same amount of padding but it now does not also push the horizontal line - just the text moves to the left

--- a/thorax.html
+++ b/thorax.html
@@ -574,8 +574,8 @@
 	        <div class="row">
 	
 
-	            <div class="col-lg-12" style="padding-left:3%">
-	                <h3 class="page-header">Jump to another region</h3>
+	            <div class="col-lg-12">
+	                <h3 class="page-header" style="padding-left:3%">Jump to another region</h3>
 	            </div>
 	
 
