--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -558,8 +558,8 @@
         <!-- Related Projects Row -->
         <div class="row">
 
-            <div class="col-lg-12" style="padding-left:3%">
-                <h3 class="page-header">Jump to another region</h3>
+            <div class="col-lg-12">
+                <h3 class="page-header" style="padding-left:3%">Jump to another region</h3>
             </div>
 
             <div class="col-sm-3 col-xs-6" style="padding-left:3%">
